@@ -1,5 +1,8 @@
 2017-09-18  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_content.js:
+	Modify focusItem function.
+
 	* tryXpath/css/try_xpath_insert.css :
 	Modify styles.
 
